updated Description and README

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,9 @@ Date: 2016-02-26
 Author: Brendan F. Wringe
 Maintainer: Brendan F. Wringe <bwringe@gmail.com>
 Author@R: c(person("Brendan", "Wringe", email = "bwringe@gmail.com", role =
-    c("aut", "cre"), person("Nick", "Jeffries", role = "ctb"))
+    c("aut", "cre"),
+    person("Nick", "Jeffries", role = "ctb"),
+    person("Ryan", "Stanley", role = "ctb"))
 Description: More about what it does (maybe more than one line)
 License: GPL
 LazyData: TRUE
