updated nanmespace to match fixed spelling mistake

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,7 +18,7 @@ import(tidyr)
 importFrom(genepopedit,genepop_detective)
 importFrom(genepopedit,genepop_fstat)
 importFrom(genepopedit,subset_genepop)
-importFrom(hierfstat,read.fsat)
+importFrom(hierfstat,read.ftsat)
 importFrom(hierfstat,wc)
 importFrom(plyr,rbind.fill)
 importFrom(stringr,str_extract)
