updated external package linking

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,19 +7,19 @@ export(nh_accuracy_checkR)
 export(nh_analysis_data_generateR)
 export(nh_plotR)
 export(preCheckR)
-import(dplyr)
 import(ggplot2)
-import(grid)
 import(plyr)
-import(reshape2)
-import(scales)
-import(stringr)
-import(tidyr)
+importFrom(dplyr,filter)
 importFrom(genepopedit,genepop_detective)
 importFrom(genepopedit,genepop_fstat)
 importFrom(genepopedit,subset_genepop)
+importFrom(grid,arrow)
+importFrom(grid,unit)
 importFrom(hierfstat,read.fstat)
 importFrom(hierfstat,wc)
-importFrom(plyr,rbind.fill)
+importFrom(reshape2,melt)
+importFrom(scales,alpha)
+importFrom(stringr,str_detect)
 importFrom(stringr,str_extract)
 importFrom(stringr,str_split)
+importFrom(tidyr,separate)
