fixed repeat input parameter

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,13 +3,20 @@
 export(NH_Zcore)
 export(getTopLoc)
 export(hybridpower)
+export(hybridpowercomp)
 export(n_class)
 export(nh_accuracy_checkR)
 export(nh_analysis_data_generateR)
 export(nh_plotR)
 export(preCheckR)
+import(dplyr)
+import(filter)
 import(ggplot2)
+import(group_by)
+import(magrittr)
 import(plyr)
+import(summarise)
+import(ungroup)
 importFrom(dplyr,filter)
 importFrom(genepopedit,genepop_detective)
 importFrom(genepopedit,genepop_fstat)
