--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,15 +9,13 @@ export(nh_accuracy_checkR)
 export(nh_analysis_data_generateR)
 export(nh_plotR)
 export(preCheckR)
-import(dplyr)
-import(filter)
 import(ggplot2)
-import(group_by)
 import(magrittr)
 import(plyr)
-import(summarise)
-import(ungroup)
 importFrom(dplyr,filter)
+importFrom(dplyr,group_by)
+importFrom(dplyr,summarise)
+importFrom(dplyr,ungroup)
 importFrom(genepopedit,genepop_detective)
 importFrom(genepopedit,genepop_fstat)
 importFrom(genepopedit,subset_genepop)
