added nh_analysis_GenerateR plus documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(nh_accuracy_checkR)
 export(nh_analysis_data_generateR)
 export(nh_plotR)
 export(preCheckR)
+export(sim.pops.include)
 import(ggplot2)
 import(magrittr)
 import(plyr)
