--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,10 +6,10 @@ export(hybridpower)
 export(hybridpowercomp)
 export(n_class)
 export(nh_accuracy_checkR)
+export(nh_analysis_GenerateR)
 export(nh_analysis_data_generateR)
 export(nh_plotR)
 export(preCheckR)
-export(sim.pops.include)
 import(ggplot2)
 import(magrittr)
 import(plyr)
