--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(preCheckR)
 import(ggplot2)
 import(magrittr)
 import(plyr)
+import(stringr)
 importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
 importFrom(dplyr,summarise)
