Added function nh_subset to subset loci from NewHybrids format datasets. Updated NAMESPACE accordingly.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(nh_accuracy_checkR)
 export(nh_analysis_GenerateR)
 export(nh_analysis_data_generateR)
 export(nh_plotR)
+export(nh_subset)
 export(preCheckR)
 import(ggplot2)
 import(magrittr)
