--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(nh_accuracy_checkR)
 export(nh_analysis_GenerateR)
 export(nh_analysis_data_generateR)
 export(nh_multiplotR)
+export(nh_panel_delta_plotR)
 export(nh_plotR)
 export(nh_subset)
 export(preCheckR)
