--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
 importFrom(dplyr,summarise)
 importFrom(dplyr,ungroup)
+importFrom(genepopedit,Optimfunc)
 importFrom(genepopedit,genepop_detective)
 importFrom(genepopedit,genepop_fstat)
 importFrom(genepopedit,subset_genepop)
