--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,16 +6,16 @@ export(freqbasedsim_Advanced)
 export(freqbasedsim_UB)
 export(freqbasedsim_UB2)
 export(getTopLoc)
+export(hybridPowerComp)
 export(hybridpower)
-export(hybridpowercomp)
 export(n_class)
 export(nh_accuracy_checkR)
-export(nh_analysis_GenerateR)
-export(nh_analysis_data_generateR)
+export(nh_analysis_generateR)
+export(nh_analysis_simulateR_generateR)
 export(nh_multiplotR)
 export(nh_panel_delta_plotR)
 export(nh_plotR)
-export(nh_subset)
+export(nh_subsetR)
 export(nh_zcore)
 export(preCheckR)
 import(ggplot2)
