Add modified hybridPowerComp function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(freqbasedsim_UB)
 export(freqbasedsim_UB2)
 export(getTopLoc)
 export(hybridPowerComp)
+export(hybridPowerComp2)
 export(hybridpower)
 export(n_class)
 export(nh_accuracy_checkR)
