--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,7 +27,10 @@ import(ggplot2)
 import(magrittr)
 import(parallel)
 import(plyr)
+import(separate)
 import(stringr)
+import(tidyr)
+importFrom(data.table,fread)
 importFrom(dplyr,do)
 importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
@@ -37,13 +40,19 @@ importFrom(genepopedit,Optimfunc)
 importFrom(genepopedit,genepop_detective)
 importFrom(genepopedit,genepop_fstat)
 importFrom(genepopedit,subset_genepop)
+importFrom(genepopedit,subset_genepop_aggregate)
+importFrom(genepopedit,subset_genepop_individual)
+importFrom(genepopedit,subset_genepop_rename)
 importFrom(grid,arrow)
 importFrom(grid,unit)
 importFrom(hierfstat,read.fstat)
 importFrom(hierfstat,wc)
+importFrom(httr,BROWSE)
+importFrom(plyr,rbind.fill)
 importFrom(reshape2,melt)
 importFrom(scales,alpha)
 importFrom(stringr,str_detect)
 importFrom(stringr,str_extract)
+importFrom(stringr,str_extract_all)
 importFrom(stringr,str_split)
 importFrom(tidyr,separate)
