Trying to get rid of import warning messages and general code cleaning

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,6 +38,7 @@ importFrom(dplyr,summarise)
 importFrom(dplyr,ungroup)
 importFrom(genepopedit,Optimfunc)
 importFrom(genepopedit,genepop_detective)
+importFrom(genepopedit,genepop_flatten)
 importFrom(genepopedit,genepop_fstat)
 importFrom(genepopedit,subset_genepop)
 importFrom(genepopedit,subset_genepop_aggregate)
