--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,4 +21,5 @@ Imports:
     reshape2,
     genepopedit,
     parallelnewhybrid
+Remotes: github::rystanley/genepopedit, github::bwringe/parallelnewhybrid
 RoxygenNote: 5.0.1
