--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(getTopLoc)
 export(hybridPowerComp)
 export(hybridPowerComp2)
 export(hybridPowerComp3)
+export(hybridPowerComp4)
 export(hybridpower)
 export(n_class)
 export(nh_accuracy_checkR)
