Fixed namespace, and README

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(nh_Zcore)
 export(nh_accuracy_checkR)
 export(nh_analysis_generateR)
 export(nh_analysis_simulateR_generateR)
+export(nh_build_example_results)
 export(nh_multiplotR)
 export(nh_panel_delta_plotR)
 export(nh_plotR)
